# vox-proof

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.cursor/agents/: voxproof-evidence-methodology-reviewer.md  voxproof-final-conflict-reviewer.md  voxproof-governance-auditor.md  voxproof-storage-systems-reviewer.md
.cursor/rules/: 00-project-context.mdc  10-engineering-discipline.mdc  20-rust-core-boundaries.mdc  30-documentation-truth.mdc  voxproof-work-packages.mdc
.github/workflows/: persistence-evidence-windows.yml  persistence-sqlite-windows.yml
docs/: README.md
docs/architecture/: data-contract.md  overview.md  pending-data-contracts.md  v0.2-c4-architecture.md  v0.2-c4.dsl
docs/discussion/: 2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-14-contextual-resolution-experiment.md
docs/governance/: licensing-readiness.md  material-decisions.md
docs/product/: correction-system-boundaries.md  hypotheses.md  v0.1-execution-order.md  v0.1.0-release-preparation.md  (+2 more)
examples/: phonetic_characterization.rs
src/: analysis.rs  anchor.rs  artifact_bundle.rs  calibration.rs  calibration_join.rs  candidate.rs  detector_reference_join.rs  detector_snapshot.rs  evaluation_artifact_packet.rs  evaluation_artifact_packet_file.rs  experimental_ranking.rs  experimental_retrieval.rs  human_final_reference.rs  input_authorization.rs  join_adjudication.rs  join_metric_aggregation.rs  join_metric_contribution.rs  lib.rs  main.rs  phonetic.rs  pipeline.rs  real_transcript_detector_snapshot_adapter.rs  real_transcript_detector_snapshot_materialization.rs  real_transcript_evaluation_execution.rs  real_transcript_evaluation_runner.rs  reference_alignment.rs  reference_coverage.rs  reference_identity.rs  reference_seal.rs  review.rs  reviewed_output.rs  run_manifest.rs  session_log.rs  session_summary.rs  session_terms.rs  srt.rs  synthetic_evaluation_harness.rs  transcript.rs
tests/: artifact_bundle_contract.rs  cli.rs  detector_reference_join_contract.rs  detector_snapshot_contract.rs  evaluation_artifact_packet.rs  evaluation_artifact_packet_file.rs  human_final_reference_contract.rs  input_authorization_contract.rs  join_adjudication_contract.rs  join_metric_aggregation_contract.rs  join_metric_contribution_contract.rs  persistence_candidates.rs  persistence_cross_platform.rs  persistence_durability.rs  persistence_evidence.rs  persistence_metadata.rs  persistence_scenarios.rs  persistence_sqlite_evidence.rs  persistence_sqlite_mechanism.rs  real_transcript_detector_snapshot_adapter_contract.rs  real_transcript_detector_snapshot_adapter_implementation.rs  real_transcript_evaluation_runner_contract.rs  real_transcript_evaluation_runner_implementation.rs  reference_coverage_contract.rs  reference_seal_contract.rs  run_manifest_contract.rs  synthetic_evaluation_harness.rs  synthetic_evaluation_harness_fixtures.rs
(+153 files in other folders)
